infrastructure/kubernetes/base/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
